# Universal-Converter

./: .gitignore  README.md  README_CN.md  README_TW.md  config.py  ffmpeg.py  gui.py  helper.py  index.html  main.py  other.py  package-lock.json  package.json  style_sheet.py  vite.config.js  widgets.py
.github/workflows/: Release to server.yml
assets/: retired.py
locale/en_US/LC_MESSAGES/: Universal Converter.mo  Universal Converter.po
locale/zh_CN/LC_MESSAGES/: Universal Converter.mo  Universal Converter.po
public/locale/: en_US.json  zh_CN.json
src/: App.css  App.jsx  format-options.js  main.jsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: converter.rs  document.rs  ffmpeg.rs  lib.rs  magick.rs  main.rs  metadata.rs  ncm.rs  routing.rs
src/components/: alert.jsx  auth-layout.jsx  avatar.jsx  badge.jsx  button.jsx  checkbox.jsx  combobox.jsx  description-list.jsx  dialog.jsx  dropdown.jsx  dropzone.jsx  fieldset.jsx  input.jsx  link.jsx  listbox.jsx  navbar.jsx  pagination.jsx  prompt.jsx  radio.jsx  select.jsx  sidebar-layout.jsx  sidebar.jsx  stacked-layout.jsx  switch.jsx  table.jsx  text.jsx  textarea.jsx
src/contexts/: AppContext.jsx  conversion-routing.js  format-options.js  i18n.jsx
src/pages/: About.jsx  AdvancedOptions.jsx  Dependencies.jsx  FileSelection.jsx  Settings.jsx  TerminalOutput.jsx
src/shared/: conversion-routing.json  manifest.json
tools/ocr/: cli.py
