[package]
name = "universal-converter"
version = "2.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "universal_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tokio = { version = "1.46.1", features = ["full"] }
tauri-plugin-shell = "2"
directories = "6.0.0"
dark-light = "2.0.0"
sys-locale = "0.3.2"
lazy_static = "1.5.0"
reqwest = { version = "0.12.22", features = ["json"] }
obfstr = "0.4.4"
tauri-plugin-process = "2"
